--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin version="2">
-    <id>org.zalando.intellij.swagger</id>
-    <name>Swagger Plugin</name>
+    <id>org.guidewire.swagger</id>
+    <name>Custom GW Swagger Plugin</name>
     <version>1.0.12</version>
     <vendor email="sebastian.monte@zalando.de" url="https://tech.zalando.com/">Zalando SE</vendor>
 
