--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin version="2">
-    <id>org.guidewire.swagger</id>
+    <id>org.gw.swagger</id>
     <name>Custom GW Swagger Plugin</name>
     <version>1.0.12</version>
     <vendor email="sebastian.monte@zalando.de" url="https://tech.zalando.com/">Zalando SE</vendor>
@@ -15,6 +15,16 @@
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
     <idea-version since-build="145"/>
+
+    
+    <extensionPoints>
+        <extensionPoint qualifiedName="org.gw.swagger.customFormatValues" interface="org.extensionPoints.CustomFormatValues"/>
+    </extensionPoints>
+
+    <extensions defaultExtensionNs="org.gw.swagger">
+        <customFormatValues implementation="org.extensionPoints.CustomFormatValuesImpl"/>
+    </extensions>
+    
 
     <extensions defaultExtensionNs="com.intellij">
         <completion.contributor language="JSON" implementationClass="org.zalando.intellij.swagger.completion.contributor.swagger.SwaggerJsonCompletionContributor"/>
