--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,15 +2,15 @@
     <id>org.gw.swagger</id>
     <name>Custom GW Swagger Plugin</name>
     <version>1.0.12</version>
-    <vendor email="sebastian.monte@zalando.de" url="https://tech.zalando.com/">Zalando SE</vendor>
+    <vendor email="vicky17d@gmail.com">Test user</vendor>  
 
     <depends>com.intellij.modules.lang</depends>
     <depends>org.jetbrains.plugins.yaml</depends>
 
-    <description><![CDATA[
-     <p>A plugin to help you easily edit Swagger and Open API specification files.</p><br/>
+    <description><![CDATA[ <!--todo vd fix it when merging to original swagger-->
+     <p>Test plugin</p><br/>
 
-     <p>Like this plugin? <b>Give it a star</b> at <a href="https://github.com/zalando/intellij-swagger">GitHub</a> and spread the word!</p>
+     
     ]]></description>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
